--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1"
   }
