--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/react-lottie": "^1.2.6",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1"
   }
